# stellar-tickets

./: .gitignore  CLAUDE.md  HANDOVER_AI.md  README.md  git_log_tmp.txt  git_log_tmp_utf8.txt  rust-toolchain.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
.github/: PULL_REQUEST_TEMPLATE.md
backend/: .env.example  CONTRATOS.txt  README.md  package-lock.json  package.json  tsc_output.txt
contracts/: .gitignore  Cargo.toml  README.md
contracts/contracts/ticket_nft_contract/: Cargo.toml
contracts/contracts/ticket_nft_contract/src/: lib.rs  test.rs
contracts/contracts/ticket_nft_contract/test_snapshots/test/: test_admin_transfer.1.json  test_burn_admin.1.json  test_burn_owner.1.json  test_inicializar_y_metadata.1.json  test_mint.1.json  test_mint_token_duplicado_falla.1.json  test_token_no_existente.1.json  test_transfer_no_owner_falla.1.json  test_transfer_owner.1.json
docs/: ADMIN_OFFCHAIN_SIMULATION_SPEC.md  BACKEND_AUDIT.md  BACKEND_BACKLOG.md  CONTRACTS_AUDIT.md  CONTRACTS_BACKLOG.md  CONTRACTS_ROADMAP.md  CONTRACTS_TECHNICAL_REFERENCE.md  CONTRATOS_Y_DIRECCIONES.md  FRONTEND_AUDIT.md  FRONTEND_BACKLOG.md  PROJECT_BACKLOG.md  README.md  WALLETS_ROLES_TESTNET.md
frontend/: .env.example  README.md  eslint-baseline.json  index.html  openapi.v1.json  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vercel.json
load-tests/: README.md  auth.k6.js  checkout-guard.k6.js  operational-read.k6.js  public-read.k6.js  role-guard.k6.js  run-load-suite.sh  scanner.k6.js  transactions-guard.k6.js
tooling/: README.md  (+3 more)
(+167 files in other folders)
