[package]
name = "ticket_nft_contract"
version = "0.1.0"
edition = "2021"
authors = ["Stellar Tickets <santiagoa.mesan@javeriana.edu.co>"]
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
